--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI Pipeline for Jayvee
+name: CI Pipeline
 
 on:
   push:
@@ -13,15 +13,14 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Install Python and Jayvee
-        uses: actions/setup-python@v4
+      - name: Install Node.js
+        uses: actions/setup-node@v3
         with:
-          python-version: '3.12.2'
+          node-version: '18'
 
-      - name: Install Dependencies
+      - name: Install Jayvee
         run: |
-          pip install jayvee
-          pip install -r requirements.txt
+          npm install -g @jvalue/jayvee-interpreter
 
       - name: Run Tests
         run: |
