--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,5 +25,5 @@ jobs:
 
       - name: Run Test
         run: |
-          chmod +x test.sh
-          ./test.sh
+          chmod +x project/test.sh
+          ./project/test.sh
