--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,14 +6,14 @@ on:
       - main
 
 jobs:
-  run-tests:
+  run-test:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Install Python
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
@@ -21,8 +21,9 @@ jobs:
       - name: Install Dependencies
         run: |
           pip install pytest
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      - name: Run Tests
+      - name: Run Test
         run: |
-          chmod +x project/test.sh
-          ./project/test.sh
+          chmod +x test.sh
+          ./test.sh
